--- a/src/app/UI/home/home.component.html
+++ b/src/app/UI/home/home.component.html
@@ -10,8 +10,13 @@
     Manolo Díaz
     </div>
     <h3>Estudiante de ingenieria en informática, apasionado por el desarrollo Fullstack</h3>
-    <a href="javascript:void(0);" class="scroll-down-arrow" (click)="scrollToContent()">
-        ⬇️ <!-- Usa FontAwesome u otro icono de tu elección -->
+    <div class="buttons-container">
+      <a href="../../../assets/Currículum Vitae CV.pdf" download="Currículum Vitae CV.pdf" class="diseño-button">Descargar CV <img src="../../../assets/descargando-archivo.png" alt=""></a>
+      <a href="mailto:mn.diaz.f@gmail.com?subject=Asunto del correo&body=Hola, te escribo para..." class="diseño-button">Contáctame 📧</a>
+    </div>
+
+    <a class="scroll-down-arrow" (click)="scrollToContent()">
+        <img src="../../../assets/271220.png" alt="">
     </a>
 </div>
 <div class="content" #content>
