--- a/src/app/UI/home/home.component.scss
+++ b/src/app/UI/home/home.component.scss
@@ -93,13 +93,77 @@
         position: absolute;
         bottom: 0;
         left: 50%;
-        width: 10%; // Controla el ancho de la "zona de sombra"
+        width: 80%; // Controla el ancho de la "zona de sombra"
         height: 20px; // La altura de la sombra (puede ser muy pequeña, solo para el efecto)
         transform: translateX(-50%);
         box-shadow: 0 8px 10px -5px rgba(0, 0, 0, 0.3);
         border-radius: 50%;
         pointer-events: none; // Asegura que la sombra no interfiera con el clic o el scroll
       }
+
+      .buttons-container{
+
+        display: flex;
+
+        margin-top: 1em;
+        width: 440px;
+        height: 70px;
+        justify-content: space-between;
+        align-items: center;
+
+        @media (max-width: 500px) {
+          width: 350px;
+          font-size: 16px;
+        }
+
+        @media (max-width: 440px) {
+
+          width: 320px;
+          font-size: 14px;
+        }
+
+        .diseño-button {
+        
+          justify-content: center;
+          align-items: center;
+          height: 85%;
+          text-align: center;
+          width: 42%;
+          display: flex;
+          background-color: #775a9b;
+          color: white;
+          text-decoration: none;
+          border-radius: 5px;
+          cursor: pointer;
+          font-weight: bold;
+          transition: background-color 0.3s ease;
+
+          &:hover {
+            background-color: #532a72;
+          
+          }
+
+          @media (max-width: 500px) {
+
+            height: 80%;
+            width: 45%;
+          }
+
+          @media (max-width: 440px) {
+
+            height: 80%;
+            width: 45%;
+          }
+
+          img{
+            margin-left: 7px;
+            margin-top: 2px;
+            width: 15px;
+            height: 15px;
+          }
+      }
+    }
+    
       
     .scroll-down-arrow {
         position: absolute;
@@ -109,6 +173,21 @@
         font-size: 2rem; // Ajusta el tamaño según prefieras
         color: #fff; // El color de la flecha
         cursor: pointer;
+        background-color: rgb(68, 66, 66);
+        border-radius: 50%;
+        width: 40px;
+        height: 40px;
+        display: flex;
+        justify-content: center;
+        transition: background-color 0.3s ease;
+          &:hover {
+      background-color: #532a72;
+    
+      }
+    }
+
+    img{
+      width: 33px;
     }
 
     @media (max-width: 600px) {
@@ -119,9 +198,26 @@
         h3{
             text-align: center;
             font-size: 17px;
+            padding-left: 7px;
+            padding-right: 7px;
         }
       }
+      @media (max-width: 900px) {
+        h1{
+            font-size: 20px;
 
+        }
+        .name{
+          text-align: center;
+        }
+
+        h3{
+            text-align: center;
+            font-size: 17px;
+            padding-left: 10px;
+            padding-right: 10px;
+        }
+      }
 }
 
 
@@ -137,7 +233,6 @@
     background-size: 400%;
     font-size: 150px;
     font-family: sans-serif;
-    letter-spacing: 5px;
     font-weight: 600;
     word-spacing: 5px;
     -webkit-text-fill-color: transparent;
