--- a/src/app/UI/home/home.component.html
+++ b/src/app/UI/home/home.component.html
@@ -11,7 +11,7 @@
     </div>
     <h3>Estudiante de ingenieria en informática, apasionado por el desarrollo Fullstack</h3>
     <div class="buttons-container">
-      <a href="../../../assets/Currículum Vitae CV.pdf" class="diseño-button">Descargar CV <img src="../../../assets/descargando-archivo.png" alt=""></a>
+      <a href="../../../assets/Currículum Vitae CV.pdf" target="_blank" class="diseño-button">Descargar CV <img src="../../../assets/descargando-archivo.png" alt=""></a>
       <a href="mailto:mn.diaz.f@gmail.com?subject=Asunto del correo&body=Hola, te escribo para..." class="diseño-button">Contáctame 📧</a>
     </div>
 
