--- a/src/app/UI/home/home.component.scss
+++ b/src/app/UI/home/home.component.scss
@@ -88,6 +88,10 @@
     align-items: center; /* Centra verticalmente */
     justify-content: center; /* Centra horizontalmente */
 
+    @media (max-width: 500px) {
+      padding-bottom: 37px;
+    }
+
     &::after {
         content: '';
         position: absolute;
@@ -130,7 +134,7 @@
           text-align: center;
           width: 42%;
           display: flex;
-          background-color: #775a9b;
+          background-color: #584577;
           color: white;
           text-decoration: none;
           border-radius: 5px;
@@ -139,7 +143,7 @@
           transition: background-color 0.3s ease;
 
           &:hover {
-            background-color: #532a72;
+            background-color: #4f2a72;
           
           }
 
