--- a/src/app/UI/home/home.component.scss
+++ b/src/app/UI/home/home.component.scss
@@ -1,4 +1,3 @@
-@import "../../../variables";
 
 
 
@@ -11,7 +10,7 @@
     width: 100%;
     height: 100vh;
     overflow: hidden;
-    background: $color-negro;
+    background: #1f1f1f;
     z-index: -1;
   
     @keyframes glowing {
