--- a/src/app/UI/home/home.component.html
+++ b/src/app/UI/home/home.component.html
@@ -1,9 +1,13 @@
+<!-- Estrellas -->
+
 <div class="shooting-stars">
   <div class="star"></div>
   <div class="star"></div>
   <div class="star"></div>
-  <!-- ... Agrega tantas estrellas como desees -->
 </div>
+
+<!-- Sección inicio -->
+
 <div class="hero-section">
     <h1>¡Hola! 👋, soy</h1>
     <div class="name color-gradient">
@@ -19,43 +23,8 @@
         <img src="../../../assets/271220.png" alt="">
     </a>
 </div>
+
+
 <div class="content" #content>
-    <section class="about">
-        <h2>About Us</h2>
-        <p>This is a section about the company, its history, and values.</p>
-        <!-- Agrega más contenido como imágenes, listas, etc. -->
-      </section>
-    
-      <section class="services">
-        <h2>Our Services</h2>
-        <div class="service-list">
-          <div class="service-item">Web Development</div>
-          <div class="service-item">Graphic Design</div>
-          <div class="service-item">Digital Marketing</div>
-          <!-- Más servicios... -->
-        </div>
-      </section>
-    
-      <section class="portfolio">
-        <h2>Portfolio</h2>
-        <div class="portfolio-items">
-          <!-- Portfolio items aquí -->
-        </div>
-      </section>
-    
-      <section class="testimonials">
-        <h2>Testimonials</h2>
-        <div class="testimonial">
-          <blockquote>"This company helped us transform our business."</blockquote>
-          <cite>- Happy Customer</cite>
-        </div>
-        <!-- Más testimonios... -->
-      </section>
-    
-      <section class="contact">
-        <h2>Contact Us</h2>
-        <form class="contact-form">
-          <!-- Formulario de contacto aquí -->
-        </form>
-      </section>
+  <app-about-me></app-about-me>
 </div>
