--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,7 @@
 
 *, html {
     scroll-behavior: smooth !important;
+
   }
   
 
@@ -8,8 +9,7 @@
 margin: 0;
 padding: 0;
 box-sizing: border-box;
-font-family: 'Open Sans', sans-serif;
-}
+font-family: 'Lato', sans-serif;}
 
 // Estilos para el cuerpo del documento
 body {
