about-me-update
Se modifica la seccion de conocimientos, agregando mas listas de conocimientos

--- a/src/app/UI/about-me/about-me.component.html
+++ b/src/app/UI/about-me/about-me.component.html
@@ -28,6 +28,8 @@
                     <span><b>TypeScript</b></span>
                     <span><b>Angular</b></span>
                     <span><b>Ionic</b></span>
+                    <span><b>Bootstrap</b></span>
+                    <span><b>Angular Material</b></span>
                 </div>
             </div>
             <div>
@@ -41,20 +43,48 @@
                     <span><b>Spring Security</b></span>
                     <span><b>JWT</b></span>
                     <span><b>Lombok</b></span>
+                    <span><b>Python</b></span>
 
                 </div>
             </div>
         </div>
         <div class="duo">
             <div>
-                <img src="../../../assets/servers.png" alt="">
-                <h1>Bases de datos / Cloud</h1>
+                <img src="../../../assets/bases-de-datos.png" alt="">
+                <h1>Base de datos</h1>
                 <div class="span-container">
-                    <span><b>Amazon Web Service (AWS)</b></span>
+                    <span><b>Modelado de datos</b></span>
                     <span><b>PostgreSQL</b></span>
                     <span><b>MySQL</b></span>
                     <span><b>OracleSQL</b></span>
                     <span><b>SQLServer</b></span>
+                    <span><b>PL/SQL</b></span>
+                </div>
+            </div>
+            <div>
+                <img src="../../../assets/cloud-service.png" alt="">
+                <h1>Cloud - AWS</h1>
+                <div class="span-container">
+                    <span><b>Ec2</b></span>
+                    <span><b>S3</b></span>
+                    <span><b>VPC</b></span>
+                    <span><b>RDS</b></span>
+                    <span><b>CloudWatch</b></span>
+                    <span><b>CloudFront</b></span>
+                    <span><b>IAM</b></span>
+                    <span><b>SNS</b></span>
+                    <span><b>AWS Shield</b></span>
+                </div>
+            </div>
+        </div>
+        <div class="duo">
+            <div>
+                <img src="../../../assets/tubo-de-ensayo.png" alt="">
+                <h1>Testing</h1>
+                <div class="span-container">
+                    <span><b>Mockito</b></span>
+                    <span><b>uwu</b></span>
+
                 </div>
             </div>
             <div>
