--- a/src/app/UI/about-me/about-me.component.scss
+++ b/src/app/UI/about-me/about-me.component.scss
@@ -1,6 +1,7 @@
 .container {
     text-align: center; // Centra el texto del título
     padding-top: 100px;
+    box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1);
       
     h1 {
         position: relative; // Establece la posición relativa para el contenedor del subrayado
@@ -35,8 +36,8 @@
       }
   
       .container-img {
-        width: 300px; // Ajusta según tus necesidades
-        height: 300px;
+        width: 270px; // Ajusta según tus necesidades
+        height: 270px;
         margin-left: 12rem;
         overflow: hidden;
 
