--- a/src/app/UI/home/home.component.scss
+++ b/src/app/UI/home/home.component.scss
@@ -112,11 +112,11 @@
       .buttons-container{
 
         display: flex;
-
-        margin-top: 1em;
+        flex-direction: column;
+        gap: 20px;
+        margin-top: 1.5em;
         width: 440px;
-        height: 70px;
-        justify-content: space-between;
+        height: 130px;
         align-items: center;
 
         @media (max-width: 500px) {
@@ -230,21 +230,21 @@
 
 .color-gradient {
 
-    background: linear-gradient(-135deg, #7a00cc, #8a00dd, #9933e6, #5577ee, #5599ff, #55bbff, #5599ff, #5577ee, #9933e6, #8a00dd, #7a00cc);    
-    background-size: 400%;
-    font-size: 150px;
-    font-family: sans-serif;
-    font-weight: 600;
-    word-spacing: 5px;
-    -webkit-text-fill-color: transparent;
-    -webkit-background-clip: text;
-    background-clip: text;
-    animation: animate 12s linear infinite;
-    @media (max-width: 600px) {
-        display: flex;
-        text-align: center;
-        font-size: 80px;
-      }
+  background: linear-gradient(-135deg, #7a00cc, #8a00dd, #9933e6, #5577ee, #5599ff, #55bbff, #5599ff, #5577ee, #9933e6, #8a00dd, #7a00cc);    
+  background-size: 400%;
+  font-size: 150px;
+  font-family: sans-serif;
+  font-weight: 600;
+  word-spacing: 5px;
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
+  background-clip: text;
+  animation: animate 12s linear infinite;
+  @media (max-width: 600px) {
+      display: flex;
+      text-align: center;
+      font-size: 80px;
+    }
 }
 
 @keyframes animate {
@@ -256,6 +256,26 @@
     }
 
 }
+
+
+.redes-container{
+  width: 42%;
+  display: flex;
+  gap: 20%;
+  justify-content: center;
+  padding: 10px;
+  border-radius: 5px;
+  a{
+    padding: 5px;
+    background-color: #584577;
+    border-radius: 10%;
+    transition: background-color 0.3s ease;
+  
+    &:hover {
+      background-color: #4f2a72;
+    
+    }
+}}
 
 .content{
   height: 200vh;
