--- a/src/app/UI/about-me/about-me.component.html
+++ b/src/app/UI/about-me/about-me.component.html
@@ -28,8 +28,6 @@
                     <span><b>TypeScript</b></span>
                     <span><b>Angular</b></span>
                     <span><b>Ionic</b></span>
-                    <span><b>Bootstrap</b></span>
-                    <span><b>Angular Material</b></span>
                 </div>
             </div>
             <div>
@@ -43,21 +41,47 @@
                     <span><b>Spring Security</b></span>
                     <span><b>JWT</b></span>
                     <span><b>Lombok</b></span>
-                    <span><b>Python</b></span>
 
                 </div>
             </div>
         </div>
         <div class="duo">
             <div>
-                <img src="../../../assets/servers.png" alt="">
-                <h1>Bases de datos / Cloud</h1>
+                <img src="../../../assets/servidores.png" alt="">
+                <h1>Servicios Cloud (AWS)</h1>
                 <div class="span-container">
-                    <span><b>Amazon Web Service (AWS)</b></span>
+                    <span><b>IAM</b></span>
+                    <span><b>Ec2</b></span>
+                    <span><b>RDS</b></span>
+                    <span><b>Security Groups</b></span>
+                    <span><b>API Gateway</b></span>
+                    <span><b>Cloud Watch</b></span>
+                </div>
+            </div>
+            <div>
+                <img src="../../../assets/tubo-de-ensayo.png" alt="">
+                <h1>Testing</h1>
+                <div class="span-container">
+                    <span><b>JUnit 5</b></span>
+                    <span><b>Karma</b></span>
+                    <span><b>Jasmine</b></span>
+                    <span><b>Mockito</b></span>
+
+                </div>
+            </div>
+        </div>
+        <div class="duo">
+            <div>
+                <img src="../../../assets/databases.png" alt="">
+                <h1>Bases de datos</h1>
+                <div class="span-container">
                     <span><b>PostgreSQL</b></span>
                     <span><b>MySQL</b></span>
                     <span><b>OracleSQL</b></span>
                     <span><b>SQLServer</b></span>
+                    <span><b>PgAdmin</b></span>
+                    <span><b>PL/SQL</b></span>
+
                 </div>
             </div>
             <div>
