portafolio-complete-commit
se completa la primera version visual del portafolio web

--- a/src/app/UI/home/home.component.html
+++ b/src/app/UI/home/home.component.html
@@ -31,4 +31,7 @@
 <div class="content" #content>
   <app-about-me></app-about-me>
   <app-proyects></app-proyects>
+  <app-github-proyects></app-github-proyects>
+  <app-contact></app-contact>
+  <app-footer></app-footer>
 </div>
