--- a/src/app/UI/proyects/proyects.component.html
+++ b/src/app/UI/proyects/proyects.component.html
@@ -1,7 +1,7 @@
 <div class="container">
 
 <div class="name color-gradient">
-    Proyectos Web
+    Proyectos
     </div>
 
 <div class="proyectos-container">
