--- a/src/app/UI/proyects/proyects.component.scss
+++ b/src/app/UI/proyects/proyects.component.scss
@@ -43,7 +43,7 @@
                   }
                 .icon-container{
                     display: flex;
-                    justify-content: end;
+                    justify-content: flex-end;
                     margin-top: 110px;
                     margin-right: 15px;
                     gap: 10px;
@@ -81,7 +81,7 @@
       }
     .icon-containerl{
         display: flex;
-        justify-content: start;
+        justify-content: flex-end;
         margin-top: 110px;
         margin-left: 15px;
         gap: 10px;
@@ -97,7 +97,7 @@
 .tecn{
     display: flex;
     gap:10px;
-    justify-content: end;
+    justify-content: flex-end;
     margin-top: 10px;
     font-weight: bold;
     @media (max-width: 1200px) {
@@ -124,7 +124,7 @@
   .tecnl{
     display: flex;
     gap:10px;
-    justify-content: start;
+    justify-content: flex-end;
     margin-top: 10px;
     font-weight: bold;
     width: 100%;
